Separated YANG grouping and data types definition from main model

--- a/yang/plgah-qis.html
+++ b/yang/plgah-qis.html
@@ -1,4 +1,4 @@
-<head><title> plgah-qis 
+<head><title> plgah-qis plgah-qis-types 
 </title>
 <style type="text/css" media="all">
 
@@ -154,7 +154,10 @@ function expandAllRows() {
 <div class="app">
 <div style="background: #eee; border: dashed 1px #000;">
 <h1> Module: <font color=blue>plgah-qis</font>, Namespace:
-                    <font color=blue>qis:1_1</font>, Prefix:
+                    <font color=blue>plgah:qis:1_1</font>, Prefix:
+                    <font color=blue>qis</font></h1> 
+<h1> Module: <font color=blue>plgah-qis-types</font>, Namespace:
+                    <font color=blue>plgah:qis-types:1_1</font>, Prefix:
                     <font color=blue>qis</font></h1> 
 
  <table width="100%">
@@ -931,6 +934,18 @@ When the real and imaginary values are not specified, this can be used for synta
                        <td></td>
                        <td>current</td>
                        <td nowrap>/qis:qis/qis:gate-library/qis:gate/qis:transformation/qis:cell/qis:symbolic/qis:syntax</td</tr> 
+<tr id="4" class="a">
+                     <td id="p1">
+                        <div id="p2" class="tier1">
+                           <a href="#" id="p3"
+                              onclick="toggleRows(this);return false;"
+                              class="folder">&nbsp;
+                           </a>
+                           <font color=blue>plgah-qis-types</font>
+                        </div>
+                     </td> 
+<td>module</td><td></td><td></td><td></td><td>
+                    </td></tr>
 
 </table>
 </div>
