--- a/yang/plgah-qis.html
+++ b/yang/plgah-qis.html
@@ -477,7 +477,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier5>
                              <a class="leaf-list">&nbsp;</a>
-                             <abbr title="Short/altername names">  nickname </abbr>
+                             <abbr title="Short/alternate names">  nickname </abbr>
                           </div>
                        </td>
                        <td>leaf-list</td>
@@ -870,7 +870,7 @@ When the real and imaginary values are not specified, this can be used for synta
                                 onclick="toggleRows(this);return false"
                                 class="folder">&nbsp;
                              </a>
-                             <abbr title="A cell im this matrix. Zero valued cells are optional. ">cell[row col]</abbr>
+                             <abbr title="A cell in this matrix. Zero valued cells are optional. ">cell[row col]</abbr>
                           </div>
                        </td> 
 <td nowrap>list</td>
@@ -1461,7 +1461,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier8>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="Maps a wire/qubit/cbit to a circuit/gate input number (one based index)"> <em> qubit </em></abbr>
+                             <abbr title="Maps a wire/qubit/cbit to a circuit/gate input number (one based index)"> <em> number </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -1470,7 +1470,7 @@ string
                        <td nowrap>config</td>
                        <td>?</td>
                        <td>current</td>
-                       <td nowrap>/qis:qis/qis:circuit-library/qis:circuit/qis:step/qis:operation/qis:map/qis:qubit</td</tr> 
+                       <td nowrap>/qis:qis/qis:circuit-library/qis:circuit/qis:step/qis:operation/qis:map/qis:number</td</tr> 
 <tr id="1-1-6-14-21-22-14-9" class="a">
                        <td nowrap>
                           <div id=9999 class=tier8>
@@ -1489,7 +1489,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier8>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="If specified, set the input to a fixed value 0 or 1.">  value </abbr>
+                             <abbr title="If specified, set the input to a fixed value |0> or |1>.">  value </abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -1506,7 +1506,7 @@ string
                                 onclick="toggleRows(this);return false"
                                 class="folder">&nbsp;
                              </a>
-                             <abbr title="The trasnformation for this operation. Can be a gate, a circuit, or a measurement.">(transform)</abbr>
+                             <abbr title="The transformation for this operation. Can be a gate, a circuit, or a measurement.">(transform)</abbr>
                           </div>
                        </td> 
 <td nowrap>choice</td>
@@ -1599,7 +1599,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier10>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -1723,7 +1723,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier10>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -2687,7 +2687,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier7>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -2867,7 +2867,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier7>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -3178,7 +3178,7 @@ When the real and imaginary values are not specified, this can be used for synta
                                 onclick="toggleRows(this);return false"
                                 class="folder">&nbsp;
                              </a>
-                             <abbr title="No description">statement[yang-key]</abbr>
+                             <abbr title="The collection of statements">statement[yang-key]</abbr>
                           </div>
                        </td> 
 <td nowrap>list</td>
@@ -3209,7 +3209,7 @@ When the real and imaginary values are not specified, this can be used for synta
                                 onclick="toggleRows(this);return false"
                                 class="folder">&nbsp;
                              </a>
-                             <abbr title="No description">(statement-type)</abbr>
+                             <abbr title="The choice of statements">(statement-type)</abbr>
                           </div>
                        </td> 
 <td nowrap>choice</td>
@@ -3471,7 +3471,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier13>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -3651,7 +3651,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier13>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -4038,7 +4038,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier12>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -4488,7 +4488,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier15>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="Maps a wire/qubit/cbit to a circuit/gate input number (one based index)"> <em> qubit </em></abbr>
+                             <abbr title="Maps a wire/qubit/cbit to a circuit/gate input number (one based index)"> <em> number </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -4497,7 +4497,7 @@ string
                        <td nowrap>config</td>
                        <td>?</td>
                        <td>current</td>
-                       <td nowrap>/qis/program-library/program/statement/execute/qis:circuit/qis:step/qis:operation/qis:map/qis:qubit</td</tr> 
+                       <td nowrap>/qis/program-library/program/statement/execute/qis:circuit/qis:step/qis:operation/qis:map/qis:number</td</tr> 
 <tr id="1-1-7-21-30-46-39-25-16-21-5-28-27-6-8" class="a">
                        <td nowrap>
                           <div id=9999 class=tier15>
@@ -4516,7 +4516,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier15>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="If specified, set the input to a fixed value 0 or 1.">  value </abbr>
+                             <abbr title="If specified, set the input to a fixed value |0> or |1>.">  value </abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -4533,7 +4533,7 @@ string
                                 onclick="toggleRows(this);return false"
                                 class="folder">&nbsp;
                              </a>
-                             <abbr title="The trasnformation for this operation. Can be a gate, a circuit, or a measurement.">(transform)</abbr>
+                             <abbr title="The transformation for this operation. Can be a gate, a circuit, or a measurement.">(transform)</abbr>
                           </div>
                        </td> 
 <td nowrap>choice</td>
@@ -4626,7 +4626,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier17>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -4750,7 +4750,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier17>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -4905,7 +4905,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier12>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -5198,7 +5198,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier13>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -5378,7 +5378,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier13>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
@@ -5765,7 +5765,7 @@ string
                        <td nowrap>
                           <div id=9999 class=tier12>
                              <a class="leaf">&nbsp;</a>
-                             <abbr title="The indentifier of the library containining the resource"> <em> library_id </em></abbr>
+                             <abbr title="The identifier of the library containing the resource"> <em> library_id </em></abbr>
                           </div>
                        </td>
                        <td>leaf</td>
